Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,10 +136,7 @@
     "# loading dataset into Pandas DataFrame\n",
     "iris = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
     "                 , names=['sepal length','sepal width','petal length','petal width','target'])\n",
-    "iris.head()\n",
-    "\n",
-    "# Your code here \n",
-    "\n"
+    "iris.head()\n"
    ]
   },
   {
