Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,9 @@
    ],
    "source": [
     "# Standardize the features\n",
-    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "X = StandardScaler().fit_transform(X)\n",
+    "pd.DataFrame(data = X, columns = features).head()\n",
     "\n",
     "# Your code here \n",
     "\n"
