Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,9 @@
    "outputs": [],
    "source": [
     "# Run the PCA algorithm\n",
-    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "principalComponents = pca.fit_transform(X)\n",
     "\n",
     "# Your code here \n",
     "\n"
