Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -402,7 +402,10 @@
    ],
    "source": [
     "# Create a new dataset fro principal components \n",
-    "\n",
+    "df = pd.DataFrame(data = principalComponents\n",
+    "             , columns = ['PC1', 'PC2'])\n",
+    "result_df = pd.concat([df, iris[['target']]], axis = 1)\n",
+    "result_df.head(5)\n",
     "\n",
     "# Your code here \n",
     "\n"
