Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -489,23 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variance of each component: [0.72770452 0.23030523]\n",
-      "\n",
-      " Total Variance Explained: 95.8\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-631f1f00e878>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-631f1f00e878>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    Variance of each component: [0.72770452 0.23030523]\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Calculate the variance explained by pricipal components\n",
     "\n",
+    "Variance of each component: [0.72770452 0.23030523]\n",
     "\n",
+    " Total Variance Explained: 95.8\n",
     "# Your code here \n",
     "\n"
    ]
